add page information

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
-    <title>Todo a 10$ Cursos Premium</title>
+    <title>Cursos Premium Gratis y a bajo costo!</title>
   </head>
   <body>
     <div id="root">
